# cdm-mcp-server

./: .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml  requirements.txt  settings.gradle
.github/workflows/: test.yml
config/: cdm-spark-job-logs-policy.json
docs/guide/: user_guide.md
scripts/: mcp-server-entrypoint.sh  minio_create_bucket_entrypoint.sh
src/: main.py
src/delta_lake/: data_store.py  delta_service.py  minio_utils.py  spark_utils.py
src/postgres/: connection.py  hive_metastore.py
src/routes/: delta.py
src/service/: app_state.py  arg_checkers.py  config.py  dependencies.py  error_mapping.py  errors.py  exception_handlers.py  exceptions.py  http_bearer.py  kb_auth.py  models.py
tests/: test_main.py
tests/delta_lake/: test_data_store.py  test_delta_service.py  test_minio_utils.py  test_spark_utils.py
tests/postgres/: test_connection.py  test_hive_metastore.py
tests/routes/: test_delta.py
tests/service/: test_app_state.py  test_arg_checkers.py  test_config.py  test_error_mapping.py  test_errors.py  test_exception_handlers.py  test_exceptions.py  test_http_bearer.py  test_kb_auth.py  test_models.py
