[project]
name = "cdm-mcp-server"
version = "0.1.0"
description = "CDM MCP Server"
readme = "README.md"
requires-python = "==3.11.9"
dependencies = [
    "fastapi==0.115.12",
    "uvicorn==0.34.2",
    "fastapi-mcp==0.3.4",
    "mcp==1.9.1",
    "pyspark==3.5.5",
    "delta-spark==3.3.2",
    "aiohttp==3.11.18",
    "cacheout==0.16.0",
    "minio==7.2.15",
    "psycopg==3.2.9",
    "sqlparse==0.5.3",
]

[dependency-groups]
dev = [
    "ipython>=9.2.0",
    "pytest==8.3.5",
    "pytest-cov==6.1.1",
]