[project]
name = "cdm-mcp-server"
version = "0.1.0"
description = "CDM MCP Server"
readme = "README.md"
requires-python = "==3.11.9"
dependencies = [
    "fastapi==0.119.1",
    "uvicorn==0.38.0",
    "fastapi-mcp==0.4.0",
    "mcp==1.18.0",
    "pyspark==3.5.6",
    "delta-spark==3.3.2",
    "aiohttp==3.13.1",
    "cacheout==0.16.0",
    "minio==7.2.18",
    "psycopg==3.2.11",
    "sqlparse==0.5.3",
]

[dependency-groups]
dev = [
    "ipython==9.6.0",
    "pytest==8.4.2",
    "pytest-cov==7.0.0",
]